--- a/waste_waste.ipynb
+++ b/waste_waste.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-31 18:50:32.050018: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-05-31 20:35:28.272748: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7ad26780",
    "metadata": {},
    "outputs": [
@@ -284,8 +284,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 3803 images belonging to 9 classes.\n",
-      "Found 949 images belonging to 9 classes.\n"
+      "Found 3798 images belonging to 9 classes.\n",
+      "Found 954 images belonging to 9 classes.\n"
      ]
     }
    ],
@@ -294,25 +294,42 @@
     "batch_size = 32\n",
     "\n",
     "datagen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
-    "    rescale=1.0/255, \n",
-    "    validation_split=0.2\n",
+    "    rescale=1.0/255\n",
     ")\n",
     "\n",
     "train_generator = datagen.flow_from_directory(\n",
-    "    \"data/RealWaste\",  \n",
+    "    \"data/train/RealWaste\",  \n",
     "    target_size=image_size,\n",
     "    batch_size=batch_size,\n",
     "    class_mode=\"sparse\",\n",
-    "    subset=\"training\"\n",
+    "    shuffle=True\n",
     ")\n",
     "\n",
     "val_generator = datagen.flow_from_directory(\n",
-    "    \"data/RealWaste\",  \n",
+    "    \"data/val/RealWaste\",  \n",
     "    target_size=image_size,\n",
     "    batch_size=batch_size,\n",
     "    class_mode=\"sparse\",\n",
-    "    subset=\"validation\"\n",
-    ")"
+    "    shuffle=True\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9fa94b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(val_generator.classes[:10])"
    ]
   },
   {
@@ -384,6 +401,55 @@
     "results = model.evaluate(val_generator)\n",
     "print(f\"Validation Loss: {results[0]:.4f}\")\n",
     "print(f\"Validation Accuracy: {results[1]:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a6e3b1d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted labels: [4 5 3 1 6 7 4 1 6 0]\n",
+      "Actual labels: [0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Predicted labels:\", y_pred[:10])  # Compare first 10\n",
+    "print(\"Actual labels:\", val_generator.classes[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d56bfc8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 143ms/step\n",
+      "(array([0, 1, 2, 3, 4, 5, 6, 7, 8]), array([103,  82,  78, 153,  92, 106, 175,  59, 101]))\n",
+      "==========\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 143ms/step\n",
+      "[4 5 3 1 6 7 4 1 6 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = np.argmax(model.predict(val_generator), axis=1)\n",
+    "print(np.unique(y_pred, return_counts=True))\n",
+    "\n",
+    "print(\"==========\")\n",
+    "print(val_generator.classes[:10])  # Check actual labels\n",
+    "y_pred = np.argmax(model.predict(val_generator), axis=1)\n",
+    "print(y_pred[:10])  # Check predicted labels"
    ]
   },
   {
@@ -1456,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "17ef594f",
    "metadata": {},
    "outputs": [],
@@ -1493,6 +1559,7 @@
     "def generate_from_text(text):\n",
     "    # call model_pipeline, our text classifier\n",
     "    None\n",
+    "    asd\n",
     "\n",
     "def generate_response(input):\n",
     "    if input is image:\n",
